# disassembler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
InstructionDataGen/: Form1.Designer.cs  Form1.cs  InstructionDataGen.csproj  Program.cs
InstructionDataGen/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
app/: CMakeLists.txt  app.cpp
disassembler/: Common.h  Entrypoint.cpp  InstructionDescriptionList.cpp  InstructionList.cpp  InstructionNameList.cpp  InstructionOperandEncodingList.cpp  InstructionOperandsList.cpp  Instructions.h  ModRM.cpp  ModRM.h  Prefixes.cpp  Prefixes.h  Registers.cpp  Registers.h  decoder.cpp  decoder.h  disassembler.sln  disassembler.vcxproj  disassembler.vcxproj.filters
disassembler/testing/: Entrypoint.cpp  catch.hpp
include/: addressParameter.h  bidirectionalIterator.h  common.h  config.h.in  disassembler.h  immediateParameter.h  instruction.h  instructionParameter.h  registerParameter.h  typeTraits.h  variant.h
include/architecture/x86/: x86Disassembler.h  x86Environment.h  x86Instruction.h  x86InstructionAddressParameter.h  x86InstructionAddressParameterPrototype.h  x86InstructionImmediateParameter.h  x86InstructionImmediateParameterPrototype.h  x86InstructionParameterPrototype.h  x86InstructionParameterPrototypeTypes.h  x86InstructionPrefix.h  x86InstructionPrototype.h  x86InstructionPrototypeList.h  x86Modrm.h  (+4 more)
src/: CMakeLists.txt  addressParameter.cpp  disassembler.cpp  immediateParameter.cpp  instruction.cpp  instructionParameter.cpp  registerParameter.cpp
test/: CMakeLists.txt  x86Tests.cpp
test/lib/: CMakeLists.txt
test/tests/: CMakeLists.txt
test/tests/single_instruction_tests/: CMakeLists.txt  aaa.cpp  aad.cpp  aam.cpp  aas.cpp  adc.cpp  single_instruction_tests.h
test/tests/single_instruction_tests/helpers/: address.hpp  cartesianProductView.hpp  concepts.h  disassembler.h  endian.hpp  formatters.h  imm.hpp  implied.hpp  instruction.hpp  parameter.hpp  parameter_info.hpp  prefix.h  rm.h  x86Selectors.hpp
test/tests/single_instruction_tests/helpers/generators/: concatenate.hpp  imm.hpp  implied.hpp  instruction.hpp  not_in.hpp  prefixList.hpp  resettable.hpp  selector.hpp  x86Environment.hpp
test/tests/single_instruction_tests/helpers/tests/: CMakeLists.txt  cartesianProductView.cpp  endian.cpp  imm.cpp
test/tests/single_instruction_tests/helpers/tests/generators/: concatinate.cpp  not_in.cpp  prefixList.cpp  resettable.cpp  x86Environment.cpp
(+15 files in other folders)
